fixed bug where buttons of profile page did not work on mobile by adding z index

--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -46,6 +46,7 @@
 .profile-nav {
 	position: relative;
 	top: 6em;
+	z-index: 1000;
 
 	table tr td {
 		padding: 5px;
